--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
     justify-content: space-around; /*vertical*/
     flex-direction: column;
     width: 40%;
-    min-width: 28rem;/*34rem minimizar pantalla-responsive*/
+    min-width: 28rem;
 }
 
 .group{
@@ -53,7 +53,7 @@ body{
     background: #ffffff;
     width: 100%;
     padding: 1.3rem 0;
-    margin: 3px 1rem; /*añadido*/
+    margin: 3px 1rem;
     border: 1px solid lightgray;
 }
 
